{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 64,
  "lineage": "d262e142-3a8d-b4f7-56e6-69acf075e0a3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-036293f07b9bf97ab",
            "domain": "vpc",
            "id": "eipalloc-02aa2920929adec85",
            "instance": "i-0093fb9913515e11a",
            "network_interface": "eni-07b9d34354f89557f",
            "private_dns": "ip-10-0-1-50.eu-west-3.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-15-188-135-187.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.188.135.187",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.Prod_Gateway",
            "aws_network_interface.web-server-nic",
            "aws_security_group.allow_web",
            "aws_subnet.Prod_Subnet",
            "aws_vpc.Prod_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Ubuntu-Prod-Server",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e11cbb34015ff725",
            "arn": "arn:aws:ec2:eu-west-3:067319633681:instance/i-0093fb9913515e11a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0093fb9913515e11a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-07b9d34354f89557f"
              }
            ],
            "primary_network_interface_id": "eni-07b9d34354f89557f",
            "private_dns": "ip-10-0-1-50.eu-west-3.compute.internal",
            "private_ip": "10.0.1.50",
            "public_ip": "15.188.135.187",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e3569bb99b7a4cd6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03a627b571838c05e",
            "tags": {
              "Name": "Production"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-058736d374b3dee0d"
            ]
          },
          "dependencies": [
            "aws_network_interface.web-server-nic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Prod_Gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:067319633681:internet-gateway/igw-0b29e6a0b444db265",
            "id": "igw-0b29e6a0b444db265",
            "owner_id": "067319633681",
            "tags": {
              "Name": "Prod-gateway"
            },
            "vpc_id": "vpc-02986be340481e8a7"
          },
          "dependencies": [
            "aws_vpc.Prod_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web-server-nic",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0361728423e191224",
                "device_index": 0,
                "instance": "i-0093fb9913515e11a"
              }
            ],
            "id": "eni-07b9d34354f89557f",
            "mac_address": "06:d3:69:33:0f:18",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-058736d374b3dee0d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03a627b571838c05e"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.Prod_Subnet",
            "aws_vpc.Prod_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Prod_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0997798eb368ccb12",
            "owner_id": "067319633681",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b29e6a0b444db265",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b29e6a0b444db265",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Prod_route"
            },
            "vpc_id": "vpc-02986be340481e8a7"
          },
          "dependencies": [
            "aws_internet_gateway.Prod_Gateway",
            "aws_vpc.Prod_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09625093889d05e25",
            "route_table_id": "rtb-0997798eb368ccb12",
            "subnet_id": "subnet-03a627b571838c05e"
          },
          "dependencies": [
            "aws_internet_gateway.Prod_Gateway",
            "aws_route_table.Prod_route_table",
            "aws_subnet.Prod_Subnet",
            "aws_vpc.Prod_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:067319633681:security-group/sg-058736d374b3dee0d",
            "description": "Allow web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-058736d374b3dee0d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP connection from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS connection from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH connection from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "067319633681",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-02986be340481e8a7"
          },
          "dependencies": [
            "aws_vpc.Prod_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Prod_Subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:067319633681:subnet/subnet-03a627b571838c05e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-03a627b571838c05e",
            "map_public_ip_on_launch": false,
            "owner_id": "067319633681",
            "tags": {
              "Name": "Prod_Subnet"
            },
            "vpc_id": "vpc-02986be340481e8a7"
          },
          "dependencies": [
            "aws_vpc.Prod_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Prod_VPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:067319633681:vpc/vpc-02986be340481e8a7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06cbd3701bb949562",
            "default_route_table_id": "rtb-0d8dc33e29a9a551f",
            "default_security_group_id": "sg-0a080031061bcf7e9",
            "dhcp_options_id": "dopt-1e658976",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-02986be340481e8a7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d8dc33e29a9a551f",
            "owner_id": "067319633681",
            "tags": {
              "Name": "Production"
            }
          }
        }
      ]
    }
  ]
}